#25 Lobby_Mockup verbessert und Popups erstellt. Partie-Editor_Mockups und Popups verbessert

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -40,7 +40,7 @@ Falls die Verbindung zum Server fehlgeschlagen ist, wird dem Benutzer ein Popup 
 
 Dialog \glqq{}Lobby-Übersicht\grqq{}
 
-In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobbys und die Anzahl der Spieler und Zuschauer, die sich in ihr befinden, angezeigt. Durch Klicken auf Beitreten kann der Benutzer einer bestehenden Lobby beitreten. Durch Klicken auf den Verlassen-Button gelangt man zum Hauptmenü. Der Aktualisieren-Button aktualisiert die Lobby-Übersicht. Mit dem Button Namen ändern, kann man den Namen einer Lobby verändern. Mit dem Button Lobby erstellen kann man eine neue Lobby erstellen.
+In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobbys und die Anzahl der Spieler und Zuschauer, die sich in ihr befinden angezeigt. Durch Klicken auf Beitreten kann der Benutzer einer bestehenden Lobby beitreten. Durch Klicken auf den Verlassen-Button gelangt man zum Hauptmenü. Der Aktualisieren-Button aktualisiert die Lobby-Übersicht. Mit dem Button Namen ändern, kann man den Namen einer Lobby verändern. Mit dem Button Lobby erstellen kann man eine neue Lobby erstellen.
 
 \begin{figure}
   \centering
@@ -50,7 +50,7 @@ In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobbys und die Anza
 
 Popup \glqq{}Namen ändern\grqq{}
 
-In diesem Popup kann der Benutzer den Namen einer Lobby nachträglich verändern. Durch den Schließen-Button verschwindet das Popup-Fenster und der Benutzer gelangt zurück in die Lobby-Übersicht.
+In diesem Popup kann der Benutzer den Namen einer Lobby nachträglich verändern. Durch den Schließen-Button verschwindet das Popup-Fenster und der benutzer gelangt zurück in die Lobby-Übersicht.
 
 \begin{figure}
   \centering
@@ -60,7 +60,7 @@ In diesem Popup kann der Benutzer den Namen einer Lobby nachträglich verändern
 
 Popup \glqq{}Lobbynamen eingeben und Konfig. erstellen\grqq{}
 
-In diesem Popup kann der Benutzer eine neue Lobby erstellen. Dazu muss er den Lobbynamen und eine Konfiguration festlegen. Durch Klicken auf den Button Neue Konfig. kann der Benutzer eine Konfiguration auswählen oder eine Neue erstellen. Durch Klicken auf den Bestätigen-Button, kommt der Benutzer zurück in die Lobbyübersicht.
+In diesem Popup kann der Benutzer eine neue Lobby erstellen. Dazu muss er den Lobbynamen und eine Konfiguration festlegen. Durch Klicken auf den Button Neue Konfig. kann der Benutzer eine Konfiguration auswählen oder eine neue erstellen. Durch Klicken auf den Bestätigen-Button, kommt der Benutzer zurück in die Lobbyübersicht.
 
 \begin{figure}
   \centering
@@ -72,8 +72,8 @@ Dialog \glqq{}Editor\grqq{}
 
 Mit der Schaltfläche \glqq{}Schließen\grqq{} wechselt man zum Dialog \glqq{}Lobby-Übersicht\grqq{}.
 Mit der Schaltfläche \glqq{}Hilfe\grqq{} öffnet sich ein Hilfe-Popup, in dem dem Benutzer Informationen zu möglichen Interaktionen angezeigt werden.
-In den drei Dropdown-Menüs kann der Benutzer das gewünschte Szenario, die gewünschte Charakterliste und die gewünschte Partie-Konfiguration auswählen. Wenn man in einem Dropdown-Menü den Eintrag 'Neue(s) Szenario/Charakterliste/Partie-Konfiguration erstellen' auswählt, dann wechselt die Ansicht zum Dialog \glqq{}Szenario-/Charakter-/Partie-Editor\grqq{} und eine neue Datei des entsprechenden Typs wird erstellt und zum Editieren geöffnet.
-Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Schaltfläche mit der Aufschrift \glqq{}bearbeiten\grqq{} neben dem Eintrag angezeigt. Mit dieser Schaltfläche wechselt man ebenfalls in den entsprechenden Editor und die Datei des Eintrags wird geöffnet zum Editieren.
+In den drei Dropdown-Menüs kann der Benutzer das gewünschte Szenario, die gewünschte Charakterliste und die gewünschte Partie-Konfiguration auswählen. Wenn man in einem Dropdown-Menü den Eintrag 'Neue(s) Szenario/Charakterliste/Partie-Konfiguration erstellen' auswählt, dann wechselt die Ansicht zum Dialog \glqq{}Szenario-/Charakter-/Partie-Editor\grqq{} und eine neue Datei des entsprechenden Typs wird erstellt und zum editieren geöffnet.
+Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Schaltfläche mit der Aufschrift \glqq{}bearbeiten\grqq{} neben dem Eintrag angezeigt. Mit dieser Schaltfläche wechselt man ebenfalls in den entsprechenden Editor und die Datei des Eintrags wird geöffnet zum editieren.
 
 \begin{figure}
   \centering
@@ -83,7 +83,7 @@ Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Sc
 
 Popup \glqq{}Hilfe-Editor\grqq{}
 
-In diesem Popup wird dem Benutzer mitgeteilt, welche Interaktionen er mit dem Editor-View eingehen kann. Über den Schließen-Button wird das Hilfe-Popup-Fenster geschlossen und der Benutzer kehrt zum Editor zurück.
+In diesem Popup wird dem Benutzer mitgeteilt, welche Interaktionen er mit dem Editor-View eingehen kann. Über den Schließen-Button wird das Hilfe-Popup-Fenster geschlossen und der benutzer kehrt zum Editor zurück.
 
 \begin{figure}
   \centering
@@ -96,9 +96,8 @@ Dialog \glqq{}Lobby\grqq{}
 Die Liste mit den verbundenen Clients wird kontinuierlich sortiert, sodass die Spieler immer an oberster Stelle stehen. Die Spieler und die Zuschauer werden untereinander chronologisch nach Beitritt zur Lobby bzw. dem letzten Rollenwechsel sortiert, sodass der Client, der als letzter als Zuschauer der Lobby beigetreten ist bzw. als letzter innerhalb der Lobby die Rolle zu Zuschauer geändert hat, den untersten Eintrag in der Liste hat. Die KI-Clients sind am Benutzernamen erkennbar. 
 Mit der Schaltfläche \glqq{}Rolle wechseln\grqq{} ändert sich die eigene Rolle von 'Spieler' zu 'Zuschauer' und umgekehrt. 
 Mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt der Client in den Dialog \glqq{}KI-Konfiguration\grqq{}.
-Mit der Schaltfläche \glqq{}Zurück\grqq{} wechselt der Client in den Dialog \glqq{}Lobby-Übersicht\grqq{}.
-Die Schaltfläche \glqq{}Bereit\grqq{} ist nur für Clients in der Rolle 'Spieler' eingeblendet. Mit dieser Schaltfläche signalisiert der Benutzer, dass er bereit ist, die Spielpartie zu beginnen. Wenn die Schaltfläche gedrückt wird, wird sie ersetzt durch eine Schaltfläche mit der Aufschrift \glqq{}Nicht mehr bereit\grqq{}. Mit dieser Schaltfläche signalisiert der Benutzer, dass er nun doch nicht mehr bereit ist, die Spielpartie zu beginnen. Die Schaltfläche \glqq{}Spiel starten\grqq{} kann nur dann von einem Client gedrückt werden, wenn dieser Client die Rolle 'Spieler' hat und alle Spieler-Clients der Lobby ihre Spielbereitschaft mit Drücken der Schaltfläche \glqq{}Bereit\grqq{} signalisiert haben.
-Mit der Schaltfläche \glqq{}Spiel starten\grqq{} wird eine Spielpartie gestartet und die Ansicht wird zum Dialog \glqq{}Spielfeld\grqq{} gewechselt.
+Mit der Schaltfläche \glqq{}Lobby verlassen\grqq{} wechselt der Client in den Dialog \glqq{}Lobby-Übersicht\grqq{}.
+Die Schaltfläche \glqq{}Spiel starten\grqq{} kann nur dann von einem Client gedrückt werden, wenn dieser Client die Rolle 'Spieler' hat. Sobald sie gedrückt wurde, wird eine Spielpartie gestartet und die Ansicht wird zum Dialog \glqq{}Spielfeld\grqq{} gewechselt.
 
 \begin{figure}
   \centering
@@ -106,13 +105,29 @@ Mit der Schaltfläche \glqq{}Spiel starten\grqq{} wird eine Spielpartie gestarte
   \caption{Mockup für das Lobby-View}
 \end{figure}
 
+Popup \glqq{}Rolle wechseln Lobby\grqq{}
+
+In diesem Popup wird der Benutzer gefragt, ob er sich sicher ist, dass er seine Rolle wechseln will. Klickt er auf Ja, wechselt er seine Rolle und kehrt zur Lobby zurück, klickt er auf Abbrechen, wechselt er seine Rolle nicht und kehrt auch zur Lobby zurück.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/RolleWechseln-Lobby_Mockup.png}
+  \caption{Mockup für das Rolle wechseln-Lobby-Popup}
+\end{figure}
+
+Popup \glqq{}Konfiguration anzeigen Lobby\grqq{}
+
+In diesem Popup werden dem Benutzer die ausgewählten und für die Partie gültigen Konfigurationsdateien angezeigt. Über den Schließen-Button wird das Popup-Fenster geschlossen und der Benutzer kehrt zum Lobby-View zurück.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Konfiguration-Lobby_Mockup.png}
+  \caption{Mockup für das Konfiguration-Lobby-Popup}
+\end{figure}
+
 Dialog \glqq{}Szenario-Editor\grqq{}
 
-<<<<<<< HEAD
 Alle quadratischen Felder des Spielbretts sind mit Mausklick auswählbar. Die Schaltflächen in Form eines Pluszeichens, die den Rand des Spielbretts säumen erweitern das Spielbrett. Wenn eine Plus-Schaltfläche geklickt wird, dann wird sie ersetzt mit einem neuen Feld und an dessen äußeren Rändern, dem neuen äußeren Rand des Spielbretts erscheinen neue Plus-Schaltflächen. Alle Felder des Spielbretts sind zu Beginn freie Felder. Oberhalb des Spielbretts befinden sich die Icons der verschiedenen Feldarten. Diese lassen sich per Drag-and-Drop auf freie Felder des Spielbretts ziehen. Ist die Szenario-Konfiguration abgeschlossen, kehrt der Benutzer über den Speichern-Button zum Editor zurück. Bei Klicken auf den Speichern-Button erscheint ein Popup-Fenster, in dem der Benutzer einen Namen für die Konfiguration festlegen muss. Über den Abbrechen-Button kehrt der Benutzer zurück zum Editor-View. Klickt der Benutzer auf den Abbrechen-Button, erscheint eine Warnmeldung, die den Benutzer darauf hinweist, dass nicht gespeicherte Änderungen verworfen werden.
-=======
-Alle quadratischen Felder des Spielbretts sind per Mausklick auswählbar. Die Schaltflächen in Form eines Pluszeichens, die den Rand des Spielbretts säumen erweitern das Spielbrett. Wenn eine Plus-Schaltfläche geklickt wird, dann wird sie ersetzt mit einem neuen Feld und an dessen äußeren Rändern, dem neuen äußeren Rand des Spielbretts erscheinen neue Plus-Schaltflächen. Alle Felder des Spielbretts sind zu Beginn freie Felder. Oberhalb des Spielbretts befinden sich die Icons der verschiedenen Feldarten. Diese lassen sich per Drag-and-Drop auf freie Felder des Spielbretts ziehen. Ist die Szenario-Konfiguration abgeschlossen, kehrt der Benutzer über den Speichern-Button auf die letzte Seite zurück. Über den Abbrechen-Button kehrt der Benutzer auch zur letzten Seite zurück und die Änderungen werden verworfen. Über den Editor-Übersicht-Button gelangt der Benutzer zur Editor-Übersicht. Klickt der Benutzer auf den Abbrechen-Button oder auf den Editor-Übersicht-Button, erscheint eine Warnmeldung, die den Benutzer darauf hinweist, dass nicht gespeicherte Änderungen verworfen werden.
->>>>>>> ac4b752770533fcadfba7d6c44db306c299da5ee
 
 \begin{figure}
   \centering
