#25 KI-Konfiguration_Mockup verbessert und Hilfe-Popup erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -189,7 +189,7 @@ Wenn der Benutzer die Partie-Konfiguration abbrechen möchte, muss er in diesem 
 
 Dialog \glqq{}KI-Konfiguration\grqq{}
 
-Mit der Schaltfläche \glqq{}Zurück\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{}, ohne das ein KI-Client hinzugefügt wurde, mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{} und fügt einen KI-Client mit den ausgewählten Parametern hinzu.
+Mit der Schaltfläche \glqq{}Schließen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{}, ohne dass ein KI-Client hinzugefügt wurde, mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{} und fügt einen KI-Client mit den ausgewählten Parametern hinzu.
 Die Intelligenzstufe der KI kann über die Radiobuttons mit den Bezeichnungen 'dumm', 'normal' und 'schlau' eingestellt werden.
 Wie in FA-KI 43 beschrieben, muss es möglich sein, die KI mithilfe einer Konfigurationsdatei zu konfigurieren. Deswegen wird in diesem Dialog eine Liste mit Konfigurationsdateien dargestellt, aus denen man eine gespeicherte Konfiguration auswählen kann. Nach der Auswahl einer Konfiguration kann man mit der Schaltfläche \glqq{}Konfiguration laden\grqq{} diese Konfiguration automatisch einstellen.
 In das Eingabefeld über der Schaltfläche \glqq{}Konfiguration speichern\grqq{} wird der Name der Konfigurationsdatei vom Benutzer eingetragen. Wenn dort ein valider Dateiname eingegeben wurde, so kann die aktuell eingestellte Konfiguration mit der Schaltfläche \glqq{}Konfiguration speichern\grqq{} in das dafür vorgesehene Verzeichnis gespeichert werden und wird an die Liste der Konfigurationsdateien angefügt.
@@ -198,6 +198,16 @@ In das Eingabefeld über der Schaltfläche \glqq{}Konfiguration speichern\grqq{}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/KI-Konfiguration_Mockup.png}
   \caption{Mockup für die KI-Konfiguration}
+\end{figure}
+
+Dialog \glqq{}Hilfe-KI-Konfiguration\grqq{}
+
+In diesem Popup wird die KI-Konfiguration erklärt. Durch Klicken auf den Schließen-Button wird das Popup wieder geschlossen und der benutzer gelangt zurück zur KI-Konfiguration.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Hilfe-KI-Konfiguration_Mockup.png}
+  \caption{Mockup für das Hilfe-KI-Konfiguration-Popup}
 \end{figure}
 
 
