#25 Fehlende Dialoge und Popups in das nutzungskonzept.tex eingefügt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -155,8 +155,6 @@ Wenn der Benutzer die Szenario-Konfiguration abbrechen möchte, muss er in diese
   \caption{Mockup für das Änderungen verwerfen-Szenario-Editor-Popup}
 \end{figure}
 
-Dialog \glqq{}Charakter-Editor\grqq{}
-
 Dialog \glqq{}Partie-Editor\grqq{}
 
 Mit der Schaltfläche \glqq{}Abbrechen\grqq{} wechselt man zum Editor zurück. Mit der Schaltfläche \glqq{}Speichern\grqq{} wird die Datei gespeichert und die Ansicht wechselt zum Editor. Dabei öffnet sich ein Popup-Fenster, in welchem ein Name für die datei festgelegt werden muss. Über Abbrechen gelangt der Benutzer wieder zum Editor und alle Änderungen werden verworfen. Dabei öffnet sich ein Popup-Fenster, in welchem der benutzer bestätigen muss, dass er die datei nicht speichern möchte. Mit direkter Eingabe in das Feld der Anzeige des Werts einer Wahrscheinlichkeit oder eines anderen Werts, dem Schieberegler daneben oder den Inkrement- und Dekrementschaltflächen kann der Wert einer Wahrscheinlichkeit in Prozent oder ein Schadens-, Reichweiten-, etc. -wert festgelegt und angepasst werden.
@@ -187,6 +185,9 @@ Wenn der Benutzer die Partie-Konfiguration abbrechen möchte, muss er in diesem 
   \caption{Mockup für das Änderungen verwerfen-Partie-Editor-Popup}
 \end{figure}
 
+Dialog \glqq{}Charakter-Editor\grqq{}
+Fehlt noch.
+
 Dialog \glqq{}KI-Konfiguration\grqq{}
 
 Mit der Schaltfläche \glqq{}Schließen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{}, ohne dass ein KI-Client hinzugefügt wurde, mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt man zum Dialog \glqq{}Lobby\grqq{} und fügt einen KI-Client mit den ausgewählten Parametern hinzu.
@@ -200,7 +201,7 @@ In das Eingabefeld über der Schaltfläche \glqq{}Konfiguration speichern\grqq{}
   \caption{Mockup für die KI-Konfiguration}
 \end{figure}
 
-Dialog \glqq{}Hilfe-KI-Konfiguration\grqq{}
+Popup \glqq{}Hilfe-KI-Konfiguration\grqq{}
 
 In diesem Popup wird die KI-Konfiguration erklärt. Durch Klicken auf den Schließen-Button wird das Popup wieder geschlossen und der benutzer gelangt zurück zur KI-Konfiguration.
 
@@ -210,9 +211,27 @@ In diesem Popup wird die KI-Konfiguration erklärt. Durch Klicken auf den Schlie
   \caption{Mockup für das Hilfe-KI-Konfiguration-Popup}
 \end{figure}
 
+Dialog \glqq{}Wahlphase\grqq{}
+Fehlt noch.
+
+Dialog \glqq{}Ausrüstungsphase\grqq{}
+Fehlt noch.
+
+Dialog \glqq{}Spielbildschirm\grqq{}
+
+Hier findet das Spiel statt.
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Game_Mockup.png}
   \caption{Mockup für den Spielbildschirm}
 \end{figure}
+
+Popup \glqq{}Optionen\grqq{}
+Fehlt noch.
+
+Popup \glqq{}Pausieren\grqq{}
+Fehlt noch.
+
+Dialog \glqq{}Gewinnerbildschirm\grqq{}
+Fehlt noch.
