{figur}[h] wieder entfernt, funktioniert sowieso nicht.

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -2,7 +2,7 @@ Dialog \glqq{}Hauptmenü\grqq{}
 
 Im Hauptmenü kann der Benutzer über den Spielen-Button in die Lobby-Übersicht gelangen, wenn die Verbindung erfolgreich aufgebaut werden konnte. Falls nicht, erscheint eine Fehlermeldung als Popup. Mit dem Button Einstellungen kommt der Benutzer zu dem Einstellungen-Dialog. Durch Klick auf den Hilfe-Button öffnet sich ein Popup, in dem dem Nutzer hilfreiche Informationen zur Verfügung gestellt werden. Mit dem Beenden-Button kann der Benutzer die Anwendung verlassen und schließen.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Hauptmenue_Mockup.png}
   \caption{Mockup für das Hauptmenü}
@@ -12,7 +12,7 @@ Dialog \glqq{}Einstellungen\grqq{}
 
 In den Einstellungen kann man diverse Einstellungen vornehmen. Über den Button Hauptmenü gelangt man zurück ins Hauptmenü.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Einstellungen_Mockup.png}
   \caption{Mockup für die Einstellungen}
@@ -22,7 +22,7 @@ Popup \glqq{}Hilfe-Hauptmenü\grqq{}
 
 In dem Hilfe-Popup werden dem Benutzer alle möglichen Interaktionen mit dem entsprechenden Dialog aufgezeigt.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Hilfe-Hauptmenue_Mockup.png}
   \caption{Mockup für das Hilfe-Hauptmenü-Popup}
@@ -32,7 +32,7 @@ Popup \glqq{}Fehler bei der Verbindung zum Server\grqq{}
 
 Falls die Verbindung zum Server fehlgeschlagen ist, wird dem Benutzer ein Popup angezeigt, das ihm diese Information mitteilt.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/FehlerBeiDerVerbindungZumServer_Mockup.png}
   \caption{Mockup für das Fehler bei der Verbindung zum Server-Popup}
@@ -42,7 +42,7 @@ Dialog \glqq{}Lobby-Übersicht\grqq{}
 
 In der Lobby-Übersicht werden dem Benutzer alle vorhandenen Lobbys und die Anzahl der Spieler und Zuschauer, die sich in ihr befinden angezeigt. Durch Klicken auf Beitreten kann der Benutzer einer bestehenden Lobby beitreten. Durch Klicken auf den Verlassen-Button gelangt man zum Hauptmenü. Der Aktualisieren-Button aktualisiert die Lobby-Übersicht. Mit dem Button Namen ändern, kann man den Namen einer Lobby verändern. Mit dem Button Lobby erstellen kann man eine neue Lobby erstellen.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Lobby-Uebersicht_Mockup.png}
   \caption{Mockup für die Lobby-Übersicht}
@@ -52,7 +52,7 @@ Popup \glqq{}Namen ändern\grqq{}
 
 In diesem Popup kann der Benutzer den Namen einer Lobby nachträglich verändern. Durch den Schließen-Button verschwindet das Popup-Fenster und der benutzer gelangt zurück in die Lobby-Übersicht.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/NamenAendern_Mockup.png}
   \caption{Mockup für das Namen ändern-Popup}
@@ -62,7 +62,7 @@ Popup \glqq{}Lobbynamen eingeben und Konfig. erstellen\grqq{}
 
 In diesem Popup kann der Benutzer eine neue Lobby erstellen. Dazu muss er den Lobbynamen und eine Konfiguration festlegen. Durch Klicken auf den Button Neue Konfig. kann der Benutzer eine Konfiguration auswählen oder eine neue erstellen. Durch Klicken auf den Bestätigen-Button, kommt der Benutzer zurück in die Lobbyübersicht.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/LobbynamenEingebenUndKonfigErstellen_Mockup.png}
   \caption{Mockup für das Lobbynamen eingeben und Konfig. erstellen-Popup}
@@ -75,7 +75,7 @@ Mit der Schaltfläche \glqq{}Hilfe\grqq{} öffnet sich ein Hilfe-Popup, in dem d
 In den drei Dropdown-Menüs kann der Benutzer das gewünschte Szenario, die gewünschte Charakterliste und die gewünschte Partie-Konfiguration auswählen. Wenn man in einem Dropdown-Menü den Eintrag 'Neue(s) Szenario/Charakterliste/Partie-Konfiguration erstellen' auswählt, dann wechselt die Ansicht zum Dialog \glqq{}Szenario-/Charakter-/Partie-Editor\grqq{} und eine neue Datei des entsprechenden Typs wird erstellt und zum editieren geöffnet.
 Wenn man in einem der Dropdown-Menüs einen Eintrag auswählt, dann wird eine Schaltfläche mit der Aufschrift \glqq{}bearbeiten\grqq{} neben dem Eintrag angezeigt. Mit dieser Schaltfläche wechselt man ebenfalls in den entsprechenden Editor und die Datei des Eintrags wird geöffnet zum editieren.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Editor_Mockup.png}
   \caption{Mockup für den Editor}
@@ -85,7 +85,7 @@ Popup \glqq{}Hilfe-Editor\grqq{}
 
 In diesem Popup wird dem Benutzer mitgeteilt, welche Interaktionen er mit dem Editor-View eingehen kann. Über den Schließen-Button wird das Hilfe-Popup-Fenster geschlossen und der benutzer kehrt zum Editor zurück.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Hilfe-Editor_Mockup.png}
   \caption{Mockup für das Hilfe-Editor-Popup}
@@ -99,7 +99,7 @@ Mit der Schaltfläche \glqq{}KI hinzufügen\grqq{} wechselt der Client in den Di
 Mit der Schaltfläche \glqq{}Lobby verlassen\grqq{} wechselt der Client in den Dialog \glqq{}Lobby-Übersicht\grqq{}.
 Die Schaltfläche \glqq{}Spiel starten\grqq{} kann nur dann von einem Client gedrückt werden, wenn dieser Client die Rolle 'Spieler' hat. Sobald sie gedrückt wurde, wird eine Spielpartie gestartet und die Ansicht wird zum Dialog \glqq{}Spielfeld\grqq{} gewechselt.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Lobby_Mockup.png}
   \caption{Mockup für das Lobby-View}
@@ -109,7 +109,7 @@ Popup \glqq{}Rolle wechseln Lobby\grqq{}
 
 In diesem Popup wird der Benutzer gefragt, ob er sich sicher ist, dass er seine Rolle wechseln will. Klickt er auf Ja, wechselt er seine Rolle und kehrt zur Lobby zurück, klickt er auf Abbrechen, wechselt er seine Rolle nicht und kehrt auch zur Lobby zurück.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/RolleWechseln-Lobby_Mockup.png}
   \caption{Mockup für das Rolle wechseln-Lobby-Popup}
@@ -119,7 +119,7 @@ Popup \glqq{}Konfiguration anzeigen Lobby\grqq{}
 
 In diesem Popup werden dem Benutzer die ausgewählten und für die Partie gültigen Konfigurationsdateien angezeigt. Über den Schließen-Button wird das Popup-Fenster geschlossen und der Benutzer kehrt zum Lobby-View zurück.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Konfiguration-Lobby_Mockup.png}
   \caption{Mockup für das Konfiguration-Lobby-Popup}
@@ -129,7 +129,7 @@ Dialog \glqq{}Szenario-Editor\grqq{}
 
 Alle quadratischen Felder des Spielbretts sind mit Mausklick auswählbar. Die Schaltflächen in Form eines Pluszeichens, die den Rand des Spielbretts säumen erweitern das Spielbrett. Wenn eine Plus-Schaltfläche geklickt wird, dann wird sie ersetzt mit einem neuen Feld und an dessen äußeren Rändern, dem neuen äußeren Rand des Spielbretts erscheinen neue Plus-Schaltflächen. Alle Felder des Spielbretts sind zu Beginn freie Felder. Oberhalb des Spielbretts befinden sich die Icons der verschiedenen Feldarten. Diese lassen sich per Drag-and-Drop auf freie Felder des Spielbretts ziehen. Ist die Szenario-Konfiguration abgeschlossen, kehrt der Benutzer über den Speichern-Button zum Editor zurück. Bei Klicken auf den Speichern-Button erscheint ein Popup-Fenster, in dem der Benutzer einen Namen für die Konfiguration festlegen muss. Über den Abbrechen-Button kehrt der Benutzer zurück zum Editor-View. Klickt der Benutzer auf den Abbrechen-Button, erscheint eine Warnmeldung, die den Benutzer darauf hinweist, dass nicht gespeicherte Änderungen verworfen werden.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Szenario-Editor_Mockup.png}
   \caption{Mockup für den Szenario-Editor}
@@ -139,7 +139,7 @@ Popup \glqq{}Speichern-Szenario-Editor\grqq{}
 
 Wenn der Benutzer seine Konfigurationsdatei speichern möchte, muss er hier einen Dateinamen festlegen. Über Abbrechen gelangt er zurück in den Szenario-Editor und über Speichern gelangt der Benutzer zurück zum Editor.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Speichern-Szenario-Editor_Mockup.png}
   \caption{Mockup für das Speichern-Szenario-Editor-Popup}
@@ -149,7 +149,7 @@ Popup \glqq{}Änderungen verwerfen-Szenario-Editor\grqq{}
 
 Wenn der Benutzer die Szenario-Konfiguration abbrechen möchte, muss er in diesem Popup bestätigen, dass er sich sicher ist, alle Änderungen zu verwerfen.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Speichern-Szenario-Editor_Mockup.png}
   \caption{Mockup für das Änderungen verwerfen-Szenario-Editor-Popup}
@@ -159,7 +159,7 @@ Dialog \glqq{}Partie-Editor\grqq{}
 
 Mit der Schaltfläche \glqq{}Abbrechen\grqq{} wechselt man zum Editor zurück. Mit der Schaltfläche \glqq{}Speichern\grqq{} wird die Datei gespeichert und die Ansicht wechselt zum Editor. Dabei öffnet sich ein Popup-Fenster, in welchem ein Name für die datei festgelegt werden muss. Über Abbrechen gelangt der Benutzer wieder zum Editor und alle Änderungen werden verworfen. Dabei öffnet sich ein Popup-Fenster, in welchem der benutzer bestätigen muss, dass er die datei nicht speichern möchte. Mit direkter Eingabe in das Feld der Anzeige des Werts einer Wahrscheinlichkeit oder eines anderen Werts, dem Schieberegler daneben oder den Inkrement- und Dekrementschaltflächen kann der Wert einer Wahrscheinlichkeit in Prozent oder ein Schadens-, Reichweiten-, etc. -wert festgelegt und angepasst werden.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Partie-Editor_Mockup.png}
   \caption{Mockup für den Partie-Editor}
@@ -169,7 +169,7 @@ Popup \glqq{}Speichern-Partie-Editor\grqq{}
 
 In diesem Popup muss der Benutzer einen Dateinamen für seine Konfiguration festlegen. Mit Speichern kommt er zurück zum Editor und über Abbrechen wird das Popup-Fenster geschlossen und er gelangt wieder zum Partie-Editor.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Speichern-Partie-Editor_Mockup.png}
   \caption{Mockup für das Speichern-Partie-Editor-Popup}
@@ -179,7 +179,7 @@ Popup \glqq{}Änderungen verwerfen-Partie-Editor\grqq{}
 
 Wenn der Benutzer die Partie-Konfiguration abbrechen möchte, muss er in diesem Popup bestätigen, dass er sich sicher ist, alle Änderungen zu verwerfen.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/AenderungenVerwerfen-Partie-Editor_Mockup.png}
   \caption{Mockup für das Änderungen verwerfen-Partie-Editor-Popup}
@@ -195,7 +195,7 @@ Die Intelligenzstufe der KI kann über die Radiobuttons mit den Bezeichnungen 'd
 Wie in FA-KI 43 beschrieben, muss es möglich sein, die KI mithilfe einer Konfigurationsdatei zu konfigurieren. Deswegen wird in diesem Dialog eine Liste mit Konfigurationsdateien dargestellt, aus denen man eine gespeicherte Konfiguration auswählen kann. Nach der Auswahl einer Konfiguration kann man mit der Schaltfläche \glqq{}Konfiguration laden\grqq{} diese Konfiguration automatisch einstellen.
 In das Eingabefeld über der Schaltfläche \glqq{}Konfiguration speichern\grqq{} wird der Name der Konfigurationsdatei vom Benutzer eingetragen. Wenn dort ein valider Dateiname eingegeben wurde, so kann die aktuell eingestellte Konfiguration mit der Schaltfläche \glqq{}Konfiguration speichern\grqq{} in das dafür vorgesehene Verzeichnis gespeichert werden und wird an die Liste der Konfigurationsdateien angefügt.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/KI-Konfiguration_Mockup.png}
   \caption{Mockup für die KI-Konfiguration}
@@ -205,7 +205,7 @@ Popup \glqq{}Hilfe-KI-Konfiguration\grqq{}
 
 In diesem Popup wird die KI-Konfiguration erklärt. Durch Klicken auf den Schließen-Button wird das Popup wieder geschlossen und der benutzer gelangt zurück zur KI-Konfiguration.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Hilfe-KI-Konfiguration_Mockup.png}
   \caption{Mockup für das Hilfe-KI-Konfiguration-Popup}
@@ -221,7 +221,7 @@ Dialog \glqq{}Spielbildschirm\grqq{}
 
 Hier findet das Spiel statt.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Meilenstein03/Game_Mockup.png}
   \caption{Mockup für den Spielbildschirm}
