#25 Fehlende Mockups erstellt, aber noch nicht befüllt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -186,7 +186,14 @@ Wenn der Benutzer die Partie-Konfiguration abbrechen möchte, muss er in diesem 
 \end{figure}
 
 Dialog \glqq{}Charakter-Editor\grqq{}
-Fehlt noch.
+
+Vorlage muss noch bearbeitet werden.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Charakter-Editor_Mockup.png}
+  \caption{Mockup für den Charakter-Editor}
+\end{figure}
 
 Dialog \glqq{}KI-Konfiguration\grqq{}
 
@@ -212,10 +219,24 @@ In diesem Popup wird die KI-Konfiguration erklärt. Durch Klicken auf den Schlie
 \end{figure}
 
 Dialog \glqq{}Wahlphase\grqq{}
-Fehlt noch.
+
+Vorlage muss noch bearbeitet werden.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Wahlphase_Mockup.png}
+  \caption{Mockup für die Wahlphase}
+\end{figure}
 
 Dialog \glqq{}Ausrüstungsphase\grqq{}
-Fehlt noch.
+
+Vorlage muss noch bearbeitet werden.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Ausruestungsphase_Mockup.png}
+  \caption{Mockup für die Ausrüstungsphase}
+\end{figure}
 
 Dialog \glqq{}Spielbildschirm\grqq{}
 
@@ -234,4 +255,11 @@ Popup \glqq{}Pausieren\grqq{}
 Fehlt noch.
 
 Dialog \glqq{}Gewinnerbildschirm\grqq{}
-Fehlt noch.
+
+Vorlage muss noch bearbeitet werden.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Gewinnerbildschirm_Mockup.png}
+  \caption{Mockup für den Gewinnerbildschirm}
+\end{figure}
