#25 Spielbildschirm_Mockup passend zum Szenarien-Editor erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -240,11 +240,11 @@ Vorlage muss noch bearbeitet werden.
 
 Dialog \glqq{}Spielbildschirm\grqq{}
 
-Hier findet das Spiel statt.
+Durch Klicken auf die eigenen Agenten werden die möglichen Aktionen angezeigt. An der Seite öffnet sich dann eine Übersicht des Inventars des Agenten. In der unteren Leiste werden die Punkte des jeweiligen Agenten angezeigt. Durch Klicken auf Optionen öffnet sich ein Popup-Fenster mit allen Optionen.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{Meilenstein03/Game_Mockup.png}
+  \includegraphics[width=\textwidth]{Meilenstein03/Spielbildschirm_Mockup.png}
   \caption{Mockup für den Spielbildschirm}
 \end{figure}
 
