--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -249,7 +249,14 @@ Durch Klicken auf die eigenen Agenten werden die möglichen Aktionen angezeigt. 
 \end{figure}
 
 Popup \glqq{}Optionen\grqq{}
-Fehlt noch.
+
+In diesem Popup kann der Benutzer zu Spiel pausieren wechseln, indem er auf Pausieren klickt, er kann zu den Einstellungen wechseln, indem er auf Einstellungen klickt und er kann das Optionenfenster wieder schließen, indem er auf Schließen klickt. Dann wechselt er wieder zum Spielbildschirm.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Optionen-Spielbildschirm_Mockup.png}
+  \caption{Mockup für das Optionen-Spielbildschirm-Popup}
+\end{figure}
 
 Popup \glqq{}Pausieren\grqq{}
 Fehlt noch.
