#25 Pause-Spielbildschirm_Mockup erstellt

--- a/Meilenstein03/nutzungskonzept.tex
+++ b/Meilenstein03/nutzungskonzept.tex
@@ -250,7 +250,7 @@ Durch Klicken auf die eigenen Agenten werden die möglichen Aktionen angezeigt. 
 
 Popup \glqq{}Optionen\grqq{}
 
-In diesem Popup kann der Benutzer zu Spiel pausieren wechseln, indem er auf Pausieren klickt, er kann zu den Einstellungen wechseln, indem er auf Einstellungen klickt und er kann das Optionenfenster wieder schließen, indem er auf Schließen klickt. Dann wechselt er wieder zum Spielbildschirm.
+In diesem Popup kann der Benutzer das Spiel pausieren, indem er auf Pausieren klickt, er kann zu den Einstellungen wechseln, indem er auf Einstellungen klickt und er kann das Optionenfenster wieder schließen, indem er auf Schließen klickt. Dann wechselt er wieder zum Spielbildschirm.
 
 \begin{figure}
   \centering
@@ -259,7 +259,15 @@ In diesem Popup kann der Benutzer zu Spiel pausieren wechseln, indem er auf Paus
 \end{figure}
 
 Popup \glqq{}Pausieren\grqq{}
-Fehlt noch.
+
+Dieses Popup wird dem Benutzer solange angezeigt, wie das Spiel pausiert wird. Über Entpausieren kann die Pause aufgehoben werden.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein03/Pause-Spielbildschirm_Mockup.png}
+  \caption{Mockup für das Pause-Spielbildschirm-Popup}
+\end{figure}
+
 
 Dialog \glqq{}Gewinnerbildschirm\grqq{}
 
