Architekturentwurf, FA fehlen (#36)

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -216,6 +216,8 @@ eine funktionale Anforderung mit der höchsten Priorität ist und -$\;$- eine fu
 \subsection{Abnahmekriterien}
 \input{Meilenstein04/abnahmekriterien.tex}
 
-
+\clearpage
+\section{Architekturentwurf}
+\input{Meilenstein05/component_diagram.tex}
 
 \end{document}
